--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "build": "tsc",
+    "start": "npm run build && node dist/main.js",
+    "start:dev": "nodemon --exec ts-node src/main.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@moralisweb3/evm-utils": "^2.12.0",
     "@tsconfig/node16": "^1.0.3",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.32.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "moralis": "^2.12.0"
   }
 }
